# ltts

./: UI_config.ini  api_settings.py  error  ui_settings.py  vin.txt
SmartRV/: Notes.md  README.md  SECO_10_inch_Image_v0.10.1.md  UI_config.ini  WinnConnect_HMI_licenses.xlsx  create_dev_update.sh  deploy_build.bat  deploy_pi.sh  deploy_tunnel.sh  launch_local.bat  launch_local.sh  open_tunnel.sh  open_tunnel_dave_router.sh  open_web_tunnel.sh  pyproject.toml  requirements.bak_old  requirements.txt  tunnel_pull.sh  version.json
SmartRV/Pipelines/: wgo-smart-rv-onboard-develop-pipeline.yml  wgo-smart-rv-onboard-develop-template.yml  wgo-smart-rv-onboard-main-pipeline.yml  wgo-smart-rv-validate-build-pipeline.yml  wgo-smart-rv-validate-build-template.yml
SmartRV/Pipelines/jobs/: build_and_publish_winnconnect_app.yml  copy_files_drop_folder_job.yml  deploy_and_tag_job.yml
SmartRV/Pipelines/stages/: build_stage.yml  deploy_stage.yml
SmartRV/Pipelines/tasks/: copy_file_blob_storage_task.yml  copy_files_batch_blob_storage_task.yml  copy_unreleased_file_blob_storage_task.yml  create_meta_file_task.yml  create_package_task.yml  package_all_modules_task.yml  run_component_generation_task.yml  run_pytest_task.yml
SmartRV/Pipelines/variables/: smartrv_version_variables.yml
SmartRV/Tools/: Config_800_builder.py  SECO_HMI_Flashing_and_Recovery.md  WinnConnect_HMI_licenses.xlsx  canlogs.txt  encode_image_b64.py  push_ssh_key.sh  set_state.py  set_state_level.py  wgo_licenses.csv
SmartRV/Tools/API_Testers/: api_flood.py  state_loop.py
SmartRV/Tools/BT_Tester/: MsgCoder.py
SmartRV/Tools/Bruce/: commands.txt  convert_md.py  deploy_can.sh  deploy_iot.sh  deploy_storage.sh  dev_ota.sh  main_service_524t.sh  main_service_848EV.sh  mobile-endpoints.txt  packager.py  requirments.txt  set_state_both.py  set_state_hmi.py  set_state_level.py  set_state_local.py  tar_service_version.py  test_gen_hmi.py  test_gen_local.py  untar_service.py  update_version.py  version_update.sh
SmartRV/Tools/CANTool/: ctv3.pem
SmartRV/Tools/CanTesting/: ISO_Request.py
SmartRV/Tools/Components/: vehicle_to_data.py
SmartRV/Tools/Dom/: HAL_Obj_Inheritance.wsd  api_tester.py  deploy_iot.sh  img_blur.py  set_state.py
SmartRV/Tools/Postman/: SmartRV_Api_Demo.json  WinnConnect CAN Set State APIs.postman_collection.json  WinnConnect Coach MAIN API.postman_collection.json  local.json  smartrv.json
SmartRV/Tools/QA/: README.md
SmartRV/Tools/RS485/: modbustest.py
SmartRV/Tools/RaspberryPi/: README.md
SmartRV/Tools/mobile/: README.md  build.sh  build_frontend.sh  (+6 more)
SmartRV/bt_service/: BLE_RESEARCH.md  bt_helper.py  constants.py  pyproject.toml  rtk_hciattach.service  wgo_bluetooth.service  wgo_bt_service.py  wgo_bt_service.sh
SmartRV/can_service/: can_db_library.py  can_helper.py  can_iface.service  can_iface.sh  can_test_state.json  pyproject.toml  requirements.txt  wgo_can.service  wgo_can_service.py  wgo_can_service.sh
SmartRV/common_libs/: __init__.py  clients.py  data_helper.py
SmartRV/data/: Config_BF848EC.json  Config_DOMCOACH.json  Config_IM524D.json  Config_IM524R.json  Config_IM524T.json  Config_MOCK.json  Config_ROBO500.json  Config_VANILLA.json  Config_W44R.json  Config_WM524D.json  Config_WM524R.json  Config_WM524T.json  VANILLA_ota_template.json  about.html  about.md  s500.1053242.WM524D.componentGroup.json  s500.1053250.WM524D.componentGroup.json  s500.1053251.WM524D.componentGroup.json  s500.1054042.WM524T.componentGroup.json  s500.1054050.WM524T.componentGroup.json  s500.1054051.WM524T.componentGroup.json  s500.1054142.WM524R.componentGroup.json  s500.1054150.WM524R.componentGroup.json  s500.1054151.WM524R.componentGroup.json  s500.7053242.IM524D.componentGroup.json  s500.7053250.IM524D.componentGroup.json  s500.7053251.IM524D.componentGroup.json  s500.7054042.IM524T.componentGroup.json  s500.7054050.IM524T.componentGroup.json  s500.7054051.IM524T.componentGroup.json  s500.7054142.IM524R.componentGroup.json  s500.7054150.IM524R.componentGroup.json  s500.7054151.IM524R.componentGroup.json  s800.123456.W44R.componentGroup.json  s800.1583542.BF848EC.componentGroup.json  s800.1583542.W44R.componentGroup.json  s800.DOMCOACH.DOMCOACH.componentGroup.json  sbox.sandbox.DOMCOACH.componentGroup.json  sbox.sandbox.MOCK.componentGroup.json  sbox.sandbox.ROBO500.componentGroup.json  (+1 more)
SmartRV/hmi_tools/: clear_cache.sh  mount_storage.sh  touch_tracker.py  unmount_storage.sh
SmartRV/iot_service/: README.md  fastapi_globals.py  iotConfig.py  iot_bulk.py  iot_service.bat  iot_service.sh  mock_telemetry.py  ota_control.py  platform_api.py  provisioning.py  pyproject.toml  requirements.txt  run_tests.py  telemetry.py  untar_service.py  utils.py  wgo_iot_service.py
SmartRV/kiosk_config/: chromium.service  kiosk.service  qt-kiosk-browser.conf
SmartRV/libpygozer/: README  __init__.py  vault.py
SmartRV/main_service/: README.md  generate_openapi.py  init_system.sh  pyproject.toml  requirements.txt  run_tests.sh  wgo_main.service  wgo_main_service.py  wgo_main_service.sh
SmartRV/sample/: sample_service.py
SmartRV/setup/: build_all.bat  build_all.sh  build_all_dom.sh  build_frontend.bat  build_frontend.sh  connect_ssh.sh  convert_md.py  deploy_dom.sh  deploy_local.bat  deploy_local.sh  deploy_manual_OTA.sh  deploy_tunnel.sh  package.sh  package_build.py  prepare_guf.sh  pull_python_packages.sh  push_file.sh  push_python_packages.sh  pyproject.toml  ssh_setup_initial.sh  tunnel_wineguard.sh  update_version.py  version_api.py
SmartRV/system_service/: README.md  pyproject.toml  wgo_system.service  wgo_system_service.py  wgo_system_service.sh
SmartRV/tests/: mock_endpoints.py
SmartRV/update_service/: check_and_move.sh  check_script.sh  functions.sh  ota_service.sh  ota_worker.sh  version_update.sh
(+744 files in other folders)
