[tool.poetry]
name = "gatt"
version = "0.1.0"
description = ""
authors = ["Taylor Brushwyler <tbrushwyler@ostusa.com>"]

[tool.poetry.dependencies]
python = ">=3.7, <4"
pytz = "^2023.3.post1"
fastapi = "^0.103.1"
pydantic = ">=1.2.0,<2.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
