[tool.poetry]
name = "can_service"
version = "0.1.0"
description = ""
authors = ["Dominique Parolin <dominiqueparolin@winnebagoind.com>"]

[tool.poetry.dependencies]
python = "^3.8"
cantools = "^37.0.5"
requests = "^2.27.1"
fastapi = "^0.75.0"
uvicorn = "^0.17.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
