[tool.poetry]
name = "setup"
version = "0.1.0"
description = ""
authors = ["Dominique Parolin <dominiqueparolin@winnebagoind.com>"]

[tool.poetry.dependencies]
python = ">=3.8, <4"
pyyaml = "^6.0.1"
pytz = "^2023.3"
markdown2 = "^2.4.12"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
